--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "faker": "^6.6.6",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.6.0",
